<resources>
    <string name="app_name">C196_ABM2_Charity_Yohn</string>
    <string name="allTerms">Terms</string>
    <string name="title_activity_all_terms_list">AllTermsList</string>
    <string name="bookIconDescription">Icon_of_a_book</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="termsBtn">Terms</string>
    <string name="welcome_to_your_study_organizer">Welcome to your study organizer!</string>
    <string name="coursesBtn">Courses</string>
    <string name="assessmentsBtn">Assessments</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="AllTermsFragmentTitle">All Terms</string>
    <string name="AddTermsFragmentTitle">Add Term</string>
    <string name="listAllTermsBtnTxt">List All</string>
    <string name="addTermBtnTxt">Add Term</string>
    <string name="enterTermName">Please Enter The Term Name (Ex Spring 2022)</string>
    <string name="startDateInstruction">Please Enter The Start Date</string>
    <string name="endDateInstruction">Please Enter The End Date</string>
    <string name="currentOnlySwitchLabel">Current Only</string>
    <string name="saveAndAddCourseBtn"><![CDATA[Save & Add Courses]]></string>
    <string name="saveAndExitBtn">Save and Exit</string>
    <string name="cancelBtn">Cancel</string>
    <string name="monthLabel">Month</string>
    <string name="dayLabel">Day</string>
    <string name="yearLabel">Year</string>
    <string name="addCoursesLabel">Add Courses</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="addCourseBtnTxt">Add Course</string>
    <string name="enterNameOfCourseInstruction">Please Enter the Course Name</string>
    <string name="enterCourseStartDate">Please Enter The Course Start Date</string>
    <string name="enterCourseEndInstruction">Please Enter The Course End Date</string>
    <string name="chooseCourseInstructorInstruction">Please Choose or Add The Course Instructor</string>
    <string name="addAssesmentsBtnLabel">Add Assessment</string>
    <string name="addNoteBtnLabel">Add Note</string>
    <string name="performanceExamLabel">Performance</string>
    <string name="objectiveExamLabel">Objective</string>
    <string name="typeLabel">Type</string>
    <string name="assessmentName">Assessment Name (Ex: Math Midterm)</string>
    <string name="startDate">Start Date:</string>
    <string name="endDateLabel">End Date:</string>
    <string name="assessmentAssociatedCourseLabel">Associated Course</string>
    <string name="addAssessmentFragmentCloseBtn">Close the Add Assessment Screen</string>
    <string name="chooseAssociatedCourse">Choose the associated course</string>
    <string name="addAssociatedTermInstruction">Please Add The Associated Term</string>
    <string name="dateLabel">Date</string>
    <string name="instructorEmail">Email</string>
    <string name="instructorPhone">Phone</string>
    <string name="title_activity_term_detail">TermDetailActivity</string>
    <string name="termTitleLabel">Term Title</string>
    <string name="termStartDateLabel" />
    <string name="termEndDateLabel">Term End Date</string>
    <string name="coursesThisTermLabel">Courses This Term</string>
    <string name="courseTitleLabel">Course Title</string>
    <string name="courseStartLabel">Course Start Date</string>
    <string name="courseEndLabel">Course End Date</string>
    <string name="courseStatusLabel">Status</string>
    <string name="courseInstructorLabel">Instructor</string>
    <string name="noteBtnLabel">Notes Button</string>
    <string name="alertBtn">Associated Alerts Button</string>
    <string name="editBtn">Edit Course Information</string>
    <string name="assessmentTitleLabel">Title</string>
    <string name="assessmentTypeLabel">Type</string>
    <string name="listAllAssessmentsBtn">List All</string>
    <string name="noteText">Note Text</string>
    <string name="shareBtn">share</string>
    <string name="notes">Notes</string>
    <string name="all_notes">All Notes</string>
    <string name="todo">TODO</string>
    <string name="get_started">Get Started</string>
    <string name="setNotificationLabelText">Set Notification</string>
    <string name="genericSwitchLabel">Switch To Select</string>
    <string name="planned">Planned</string>
    <string name="inProgress">In Progress</string>
    <string name="completed">Completed</string>
    <string name="dropped">Dropped</string>
    <string name="addInstructor">Add an instructor to the database</string>
    <string name="close">Close</string>
    <string name="delete">Delete</string>
    <string name="filterSpeakableText">"Select and item to filter "</string>
    <string name="notifyStart">Set Date to Notify of Course Start</string>
    <string name="notifyEnd">Set Date to Notify of Course End</string>
    <string name="channel_name">StudentOrganizerChannel</string>
    <string name="channel_description">Notifications for Student Organizer App</string>
    <string name="alertStartDate">Please set the date you wish to be alerted</string>
    <string name="alertStartTime">Please set the time you wish to be alerted</string>
    <string name="start">Start</string>
    <string name="end">End</string>
</resources>