<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addAssessmentFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:label="Add_Assessment"
    tools:context="UI.AssessmentDetailsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/assessmentTypeLabel"
            android:layout_width="64dp"
            android:layout_height="46dp"
            android:layout_marginBottom="4dp"
            android:text="@string/typeLabel" />

        <ToggleButton
            android:id="@+id/assessmentTypeToggle"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textOn="Performance"
            android:textOff="Objective"/>
    </LinearLayout>

    <EditText
        android:id="@+id/assessmentNameTxtinput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/assessmentName"
        app:layout_constraintBottom_toTopOf="@id/assessmentStartAndEndHolder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/assessmentStartAndEndHolder"
        android:layout_width="357dp"
        android:layout_height="58dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/assessmentAssociatedCourseLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/assessmentNameTxtinput"
        app:layout_constraintVertical_bias="1.0">

        <Button
            android:id="@+id/assessmentStartDateBtn"
            android:layout_width="183dp"
            android:layout_height="wrap_content"
            android:text="@string/courseStartLabel" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/assessmentEndDateBtn"
            android:layout_width="164dp"
            android:layout_height="wrap_content"
            android:text="@string/endDateLabel" />

    </LinearLayout>

    <TextView
        android:id="@+id/assessmentAssociatedCourseLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/assessmentAssociatedCourseLabel"
        app:layout_constraintBottom_toTopOf="@id/assessmentAssociatedCourseSpinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/assessmentStartAndEndHolder" />

    <Spinner
        android:id="@+id/assessmentAssociatedCourseSpinner"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/chooseAssociatedCourse"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationHolder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/assessmentAssociatedCourseLabel" />

    <LinearLayout
        android:id="@+id/bottomNavigationHolder"
        android:layout_width="355dp"
        android:layout_height="54dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/addAssessmentFragmentCloseBtn"
            android:layout_width="122dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/addAssessmentFragmentCloseBtn"
            android:src="@android:drawable/ic_menu_close_clear_cancel" />

        <ImageButton
            android:id="@+id/assessmentAlarmBtn"
            android:layout_width="136dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/setNotificationLabelText"
            android:src="@android:drawable/ic_lock_idle_alarm" />

        <ImageButton
            android:id="@+id/assessmentSaveButton"
            android:layout_width="107dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/saveAndAddCourseBtn"
            android:src="@android:drawable/ic_menu_save" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>