<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayoutCourses"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="UI.CourseDetailsFragment">

    <EditText
        android:id="@+id/courseNameTxtInput"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:inputType="textPersonName"
        android:text="@string/enterNameOfCourseInstruction"
        app:layout_constraintBottom_toTopOf="@id/startAndEndBtnHolder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/startAndEndBtnHolder"
        android:layout_width="wrap_content"
        android:layout_height="154dp"
        android:layout_marginStart="2dp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/chooseInstructorInstruction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/courseNameTxtInput">


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/courseStartLabel" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:text="@string/courseEndLabel" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/courseStartDateBtn"
                android:layout_width="129dp"
                android:layout_height="match_parent"
                android:layout_gravity="center|left"
                android:layout_weight="1"
                android:gravity="center|left"
                android:text="@string/start" />

            <Space
                android:layout_width="24dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Button
                android:id="@+id/courseEndDateBtn"
                android:layout_width="129dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center|right"
                android:layout_weight="1"
                android:gravity="center|right"
                android:text="@string/end" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="77dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center|left"
                android:gravity="center|left"
                android:text="@string/notifyStart" />

            <Space
                android:layout_width="32dp"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="77dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center|right"
                android:gravity="center|right"
                android:text="@string/notifyEnd" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/notifyStartBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|left"
                android:gravity="left"
                android:text="@string/start" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/notifyEndBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|right"
                android:gravity="center|right"
                android:text="@string/end" />

        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/chooseInstructorInstruction"
        android:layout_width="402dp"
        android:layout_height="47dp"
        android:text="@string/chooseCourseInstructorInstruction"
        app:layout_constraintBottom_toTopOf="@+id/chooseInstructorWidgetHolder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startAndEndBtnHolder" />


    <LinearLayout
        android:id="@+id/chooseInstructorWidgetHolder"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/chooseTermInstruction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chooseInstructorInstruction">


        <Spinner
            android:id="@+id/chooseInstructorSpinner"
            android:layout_width="270dp"
            android:layout_height="48dp"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/addInstructorBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/addInstructor"
            android:src="@android:drawable/ic_input_add" />
    </LinearLayout>

    <TextView
        android:id="@+id/chooseTermInstruction"
        android:layout_width="match_parent"
        android:layout_height="18dp"
        android:text="@string/addAssociatedTermInstruction"
        app:layout_constraintBottom_toTopOf="@id/associatedTermContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chooseInstructorWidgetHolder" />

    <LinearLayout
        android:id="@+id/associatedTermContainer"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/courseStatusRadioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chooseTermInstruction">

        <Spinner
            android:id="@+id/associatedTermSpinner"
            android:layout_width="365dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:dropDownSelector="@color/light_teal" />

        <ImageButton
            android:id="@+id/addAssociatedTermBtn"
            android:layout_width="151dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@android:drawable/ic_input_add" />

    </LinearLayout>

    <RadioGroup
        android:id="@+id/courseStatusRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/addNotesAndAssessmentsBtnHolder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/associatedTermContainer">

        <RadioButton
            android:id="@+id/plannedRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/planned"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/inProgressRadioBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inProgress"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/completedRadioBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/completed"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/droppedRadioBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dropped"
            android:textSize="12sp" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/addNotesAndAssessmentsBtnHolder"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/saveCourseBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/courseStatusRadioGroup">

        <Button
            android:id="@+id/addAssessmentBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/addAssesmentsBtnLabel" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/addNoteBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/addNoteBtnLabel" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addNotesAndAssessmentsBtnHolder">

        <ImageButton
            android:id="@+id/saveCourseBtn"
            android:layout_width="186dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_baseline_save_24" />

        <ImageButton
            android:id="@+id/deleteCourseBtn"
            android:layout_width="155dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_baseline_delete_forever_24" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>